# simple-cpp-logger

./: CMakeLists.txt  README.md
example/: ClassExample.cpp  ClassExample.h  main.cpp
include/: Logger.h  Logger.impl.h
include/implementation/: Logger.impl.h  LoggerMacros.h  LoggerParameters.h  LoggerUtils.h  LoggerUtils.impl.h
resources/logo/: simple-cpp-logger-logo.psd
